tests/build/impl_ui_node/delegate_expr_error_incorrect_mut.stderr
error[E0308]: mismatched types
 --> $DIR/delegate_expr_error_incorrect_mut.rs:5:55
  |
5 | #[impl_ui_node(delegate = &self.inner, delegate_mut = &self.inner)]
  |                                                       ^^^^^^^^^^^ types differ in mutability
  |
  = note: expected mutable reference `&mut _`
                     found reference `&C`
